wrap-fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 .wrapper {
-  padding: 100px 244px;
+  width: 100%;
+  max-width: 1024px;
+  margin: 80px auto ;
 }
 
 .body {
